# ajsonrpc

./: Cargo.toml  LICENSE.md  README.md
src/: ipc.rs  lib.rs  websocketlite.rs
