[package]
name = "ajsonrpc"
version = "0.1.1"
edition = "2021"
authors = ["TennisBowling <tennisbowling@tennisbowling.com>"]
description = "A performance oriented websocket json-rpc router"
readme = "README.md"
repository = "https://github.com/tennisbowling/ajsonrpc"
homepage = "https://github.com/tennisbowling/ajsonrpc"
keywords = ["jsonrpc", "websocket", "router"]
categories = ["web-programming", "network-programming"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.19"
tokio = { version = "1", features = ["sync", "time", "rt"] }
serde = {version = "1.0", features = ["derive"] }
axum = { version = "0.6.18", features = ["macros"] }
futures = { version = "0.3"}
serde_json = "1.0.64"
tracing = "0.1"
tokio-tungstenite = "0.20.0"
url = "2.4.0"
futures-util = "0.3.28"
